added a query params and updated swagger ui
- Fetching events can now be filtered between showing a logged in users' only hosted events to all events using a `host` query param set to true.
- Fetching and saving activities can now be filtered using query param `dummy`; set to true the activity resource will be saved in as a dummy data in the Activity data model. And if `dummy` query is absent or set to false, a `eventID` property will be required and the request will save the activity resource an Event activity.
- API documentation in the Swagger UI has been updated to reflect route changes.
